prevent logo text from wrapping

--- a/src/components/Nav-b/_index.scss
+++ b/src/components/Nav-b/_index.scss
@@ -84,6 +84,7 @@
 .nav--b--sm .logo {
   display: inline-block;
   vertical-align: middle;
+  white-space: nowrap;
 }
 
 .nav--b--sm .icon--exit {
